--- a/final.css
+++ b/final.css
@@ -20,6 +20,7 @@
     overflow: hidden;
     position: sticky;
     top: 0px;
+    z-index: 5;
    
 }
 
@@ -111,6 +112,7 @@ h1{
     width: 250px;
     height:auto;
     float:right;
+    z-index: -1;
     
         
 }
