--- a/final.css
+++ b/final.css
@@ -77,6 +77,7 @@ h1{
     margin:20px;
     padding:5px;
     font-family:cursive;
+   
 }
 
 
@@ -93,10 +94,15 @@ h1{
     font-size: small;
 }
 
+.about{
+    margin:3rem;
+    padding:4rem;
+    
+}
 
 .text{
     background-color:#53a8b6;
-    margin: 20px;
+    margin: 10px;
     padding: 30px;
     font-size:30px;
     border-radius: 4rem;
@@ -109,7 +115,7 @@ h1{
 
 .picture1{
     clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-    width: 250px;
+    width: 390px;
     height:auto;
     float:right;
     z-index: -1;
@@ -119,9 +125,10 @@ h1{
 
 
 .hiking{
-    width:200px;
+    width:390px;
     height:auto;
     clip-path:circle();
+    
 }
 
 p{
@@ -136,4 +143,21 @@ p{
     border-radius: 4rem;
     margin:2rem;
     padding:5rem;
+}
+
+.july{
+    background-color: #53a8b6;
+    display: flex;
+    float:right;
+    margin:7rem;
+    padding:3rem;
+    font-size: larger;
+    border-radius: 4rem;
+}
+
+.facts{
+    background-color: #53a8b6;
+    border-radius: 4rem;
+    float:right;
+    
 }
