--- a/final.css
+++ b/final.css
@@ -150,18 +150,18 @@ p{
 }
 
 .july{
-    background-color: #53a8b6;
+    
     display: flex;
     float:right;
     margin:7rem;
     padding:3rem;
     font-size: larger;
-    border-radius: 4rem;
+    
 }
 
 .facts{
-    background-color: #53a8b6;
-    border-radius: 4rem;
+    
+    display: flex;
     float:right;
     font-size: larger;
     margin:7rem;
