--- a/final.css
+++ b/final.css
@@ -134,6 +134,8 @@ h1{
     height:auto;
     clip-path:circle();
     z-index: -1;
+    float: left;
+    
     
 }
 
@@ -161,12 +163,22 @@ p{
 
 .july{
     
-    display: flex;
-    float:right;
-    margin:7rem;
-    padding:3rem;
+    margin:10rem;
+    padding: -1px;
     font-size: larger;
     
+}
+
+.july div{
+    display: flex;
+    justify-content: space-between;
+}
+
+.montana{
+    clip-path:circle();
+    width:300px;
+    height:300px;
+    float:right;
 }
 
 .facts{
@@ -212,7 +224,9 @@ p{
   }
 
   .mySlides{
-    width:600px;
+    width:500px;
+    clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+    height:500px;
     
   }
 
