--- a/final.css
+++ b/final.css
@@ -224,9 +224,10 @@ p{
   }
 
   .mySlides{
-    width:500px;
+    width:550px;
     clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-    height:500px;
+    height:600px;
+    float:right;
     
   }
 
