--- a/final.css
+++ b/final.css
@@ -86,17 +86,8 @@ h1{
 }
 
 
-.cert{
-    margin: 20px;
-    padding:30px;
-    font-size: 20px;
-    background-color: #53a8b6;
-    text-align: left;
-
-}
-
 .length{
-    font-size: small;
+    font-size: medium;
 }
 
 .about{
@@ -120,8 +111,10 @@ h1{
 
 .picture1{
     clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
-    width: 390px;
+    width: 250px;
     height:auto;
+    margin:4px;
+    display:block;
     float:right;
     z-index: -1;
     
@@ -230,14 +223,19 @@ p{
     justify-content: space-between;
     margin:auto;
     width: 60rem;
-    height:10rem;
+    height:15rem;
   }
 
   .skills div{
     padding:1rem;
     background-color: #53a8b6;
     width:31rem;
-    text-align: center;
+    text-align: left;
     text-transform: uppercase;
   }
 
+
+  .linkedin{
+    width:100px;
+    margin:30px;
+  }
